--- a/inicio.html
+++ b/inicio.html
@@ -53,7 +53,7 @@
                 <li class="icones"><a href=""><img src="./img/linkedin.png"/></li>
             </ul>
 
-
+                <!-- mt entrou -->
 
         </div>
     </footer>
