--- a/inicio.html
+++ b/inicio.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parking.com</title>
-    <link rel="icon" type="img/x-icon" href="img/x-icon.ico"> <!-- Imagem na nova guia -->
+    <link rel="icon" type="img/x-icon" href="/img/x-icon.ico"> <!-- Imagem na nova guia -->
     <link rel="stylesheet" type="text/css" href="/css/inicio.css">
     <script src="/js/inicio.js"></script>
 </head>
@@ -23,13 +23,18 @@
             <li><a href="">Atendimento</a></li>
         </ul>
     </nav>
+
     <header class="menu-principal">
         <div class="header-1">
             <div class="logo">
                 <img src="img/logo.png"/>
+                    <ul class="login">
+                        <li><a href="">Login</a></li>
+                    </ul>
             </div>
         </div>
     </header>
+    
 
     <div class="tempo" id = "data-hora"> </div>
 
@@ -176,7 +181,8 @@
                 <li class="icones"><a href=""><img src="./img/linkedin.png"/></li>
             </ul>
         </div>
-        <p>Direitos autorais 2023 - Parking.com</p>
+        <p>Direitos Autorais 2023 - Parking.com </p>
+        <p>CNPJ: 80.520.963/0001-00</p>
     </footer>
 
 </body>
