--- a/inicio.html
+++ b/inicio.html
@@ -16,9 +16,9 @@
     </label>
     <nav>
         <ul class="menu">
-            <li><a href="">Home</a></li>
+            <li><a href="/inicio.html">Home</a></li>
             <li><a href="">Reserva</a></li>
-            <li><a href="">Parking.com</a></li>
+            <li><a href="/parking.html">Parking.com</a></li>
             <li><a href="">Contatos</a></li>
             <li><a href="">Atendimento</a></li>
         </ul>
@@ -29,7 +29,7 @@
             <div class="logo">
                 <img src="img/logo.png"/>
                     <ul class="login">
-                        <li><a href="">Login</a></li>
+                        <li><a href="/login.html">Login</a></li>
                     </ul>
             </div>
         </div>
@@ -164,23 +164,21 @@
 
     <footer>
         <img src="img/logo.png">
-       
         <ul class="lista">
-            <li class="itens"><a href="">Home</a></li>
+            <li class="itens"><a href="/inicio.html">Home</a></li>
             <li class="itens"><a href="">Reserva</a></li>
-            <li class="itens"><a href="">Parking</a></li>
+            <li class="itens"><a href="/parking.html">Parking</a></li>
             <li class="itens"><a href="">Atendimento</a></li>
         </ul>
         <div class="redessociais">
             <ul class="lista2">
                 <li class="icones"><a href=""><img src="./img/facebook.png"/></a></li>
-                <li class="icones"><a href="https://www.instagram.com/parking_klm/"><img src="./img/instagram.png"/></li>
-                <li class="icones"><a href=""><img src="./img/linkedin.png"/></li>
+                <li class="icones"><a href="https://www.instagram.com/parking_klm/"><img src="./img/instagram.png"/></a></li>
+                <li class="icones"><a href=""><img src="./img/linkedin.png"/></a></li>
             </ul>
         </div>
-        <p>Direitos Autorais 2023 - Parking.com </p>
-        <p>CNPJ: 80.520.963/0001-00</p>
+        <h4>Direitos Autorais 2023 - Parking.com</h4>
+        <h4>CNPJ: 80.520.963/0001-00</h4>
     </footer>
-
 </body>
 </html> 
