--- a/parking.html
+++ b/parking.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parking.com</title>
     <link rel="icon" type="img/x-icon" href="img/x-icon.ico">
-    <link rel="stylesheet" type="text/css" href="estilo.css">
+    <link rel="stylesheet" type="text/css" href="/css/estilo.css">
 </head>
 <body>
     <!--Cabeçalho-->
@@ -18,9 +18,9 @@
         </label>
         <nav>
             <ul class="menu">
-                <li><a href="file:///C:/Users/karin/OneDrive/Documents/IFES/QUARTO%20SEMESTRE/prog.%20web/parking.com/inicio.html">Home</a></li>
+                <li><a href="inicio.html">Home</a></li>
                 <li><a href="">Reserva</a></li>
-                <li><a href="file:///C:/Users/karin/OneDrive/Documents/IFES/QUARTO%20SEMESTRE/prog.%20web/parking.com/parking.html">Parking.com</a></li>
+                <li><a href="parking.html">Parking.com</a></li>
                 <li><a href="">Contatos</a></li>
                 <li><a href="">Atendimento</a></li>
             </ul>
@@ -35,19 +35,24 @@
     </div>
     <!--PARKING.COM-->
     <div>
-        <h1>QUEM SOMOS</h1>
-        <p>A parking.com é uma empresa inovadora no mercado, que vem com o próposito de gerenciar digitalmente o estacionamento do seu négocio.</p>
+        <img id = img src="/img/img-parking/estacionamento21200.jpg" alt="imagem do estacionamento">
+    </div>
+    <div id="divcenter">
+        <h1>Quem somos</h1><br>
+        <p>A parking.com é uma empresa inovadora no mercado, que vem com o próposito de gerenciar digitalmente o estacionamento do seu négocio.</p><br>
 
-        <h1>VISÃO</h1>
+        <img id = imgdirigindo src="/img/img-parking/dirigindo300.jpg" alt="mulher dirigindo">
+
+        <h1>Visão</h1><br>
         <p>Ser a melhor empresa de reserva de vagas de estacionamento do Brasil, entregando um sistema de fácil manuseio, pensando na singularidade de cada empresa.
-        </p>
+        </p><br>
     
-        <h1>MISSÃO</h1>
-        <p>Nossa missão é levar uma experiência prática e ágil para o cliente ao utilizar o sistema e organizar de forma simples e eficaz o estacionamento da sua empresa.</p>
+        <h1>Missão</h1><br>
+        <p>Nossa missão é levar uma experiência prática e ágil para o cliente ao utilizar o sistema e organizar de forma simples e eficaz o estacionamento da sua empresa.</p><br><br>
     
-        <h1>VALORES</h1>
+        <h1>Valores</h1><br>
         <p>
-            <ul>
+            <ul id="valoresul">
                 <li>Inovação;</li>
                 <li>Liderança;</li>
                 <li>Comprometimento;</li>
@@ -56,31 +61,24 @@
             </ul>
         </p>
     </div>
-    <div class="meio">
-        <article>
-
-        </article>
-    </div>
 
     <footer>
         <img src="img/logo.png">
-        <p>Direitos autorais 2023 - Parking.com</p>
         <ul class="lista">
-            <li class="itens"><a href="">Home</a></li>
+            <li class="itens"><a href="/inicio.html">Home</a></li>
             <li class="itens"><a href="">Reserva</a></li>
-            <li class="itens"><a href="">Parking</a></li>
+            <li class="itens"><a href="/parking.html">Parking</a></li>
             <li class="itens"><a href="">Atendimento</a></li>
         </ul>
         <div class="redessociais">
             <ul class="lista2">
                 <li class="icones"><a href=""><img src="./img/facebook.png"/></a></li>
-                <li class="icones"><a href=""><img src="./img/instagram.png"/></li>
-                <li class="icones"><a href=""><img src="./img/linkedin.png"/></li>
+                <li class="icones"><a href=""><img src="./img/instagram.png"/></a></li>
+                <li class="icones"><a href=""><img src="./img/linkedin.png"/></a></li>
             </ul>
-
-
-
         </div>
+        <h4>Direitos Autorais 2023 - Parking.com</h4>
+        <h4>CNPJ: 80.520.963/0001-00</h4>
     </footer>
 </body>
 </html>
