--- a/cadastro.html
+++ b/cadastro.html
@@ -83,20 +83,16 @@
     </div>
 
     <footer>
-        <img src="img/logo.png">
-        <p>Direitos autorais 2023 - Parking.com</p>
-        
+        <img src="img/logo.png">       
         <div class="redessociais">
             <ul class="lista2">
-                <li class="icones"><a href=""><img src="./img/facebook.png"/></a></li>
-                <li class="icones"><a href=""><img src="./img/instagram.png"/></li>
-                <li class="icones"><a href=""><img src="./img/linkedin.png"/></li>
+                <li class="icones"><a href="https://www.facebook.com/profile.php?id=100091836685763"><img src="./img/facebook.png"/></a></li>
+                <li class="icones"><a href="https://www.instagram.com/parking_klm"><img src="./img/instagram.png"/></li>
+                <li class="icones"><a href="https://www.linkedin.com/in/parking-estacionamentos-15223a274"><img src="./img/linkedin.png"/></li>
             </ul>
-
-
-
         </div>
+        <h4>Direitos Autorais 2023 - Parking.com</h4>
+        <h4>CNPJ: 80.520.963/0001-00</h4>
     </footer>
-
 </body>
 </html>
