--- a/inicio.html
+++ b/inicio.html
@@ -17,10 +17,10 @@
     <nav>
         <ul class="menu">
             <li><a href="/inicio.html">Home</a></li>
-            <li><a href="">Reserva</a></li>
+            <li><a href="/cadastro.html">Reserva</a></li>
             <li><a href="/parking.html">Parking.com</a></li>
-            <li><a href="">Contatos</a></li>
-            <li><a href="">Atendimento</a></li>
+            <li><a href="/pagamentos.html">Pagamento</a></li>
+            <li><a href="/atendimento.html">Atendimento</a></li>
         </ul>
     </nav>
 
@@ -166,15 +166,15 @@
         <img src="img/logo.png">
         <ul class="lista">
             <li class="itens"><a href="/inicio.html">Home</a></li>
-            <li class="itens"><a href="">Reserva</a></li>
             <li class="itens"><a href="/parking.html">Parking</a></li>
-            <li class="itens"><a href="">Atendimento</a></li>
+            <li class="itens"><a href="/pagamentos.html">Pagamentos</a></li>
+            <li class="itens"><a href="/atendimento.html">Atendimento</a></li>
         </ul>
         <div class="redessociais">
             <ul class="lista2">
-                <li class="icones"><a href=""><img src="./img/facebook.png"/></a></li>
+                <li class="icones"><a href="https://www.facebook.com/profile.php?id=100091836685763"><img src="./img/facebook.png"/></a></li>
                 <li class="icones"><a href="https://www.instagram.com/parking_klm/"><img src="./img/instagram.png"/></a></li>
-                <li class="icones"><a href=""><img src="./img/linkedin.png"/></a></li>
+                <li class="icones"><a href="https://www.linkedin.com/in/parking-estacionamentos-15223a274"><img src="./img/linkedin.png"/></a></li>
             </ul>
         </div>
         <h4>Direitos Autorais 2023 - Parking.com</h4>
