--- a/login.html
+++ b/login.html
@@ -51,9 +51,9 @@
         <img src="img/logo.png">
         <div class="redessociais">
             <ul class="lista2">
-                <li class="icones"><a href=""><img src="./img/facebook.png"/></a></li>
-                <li class="icones"><a href=""><img src="./img/instagram.png"/></a></li>
-                <li class="icones"><a href=""><img src="./img/linkedin.png"/></a></li>
+                <li class="icones"><a href="https://www.facebook.com/profile.php?id=100091836685763"><img src="./img/facebook.png"/></a></li>
+                <li class="icones"><a href="https://www.instagram.com/parking_klm"><img src="./img/instagram.png"/></a></li>
+                <li class="icones"><a href="https://www.linkedin.com/in/parking-estacionamentos-15223a274"><img src="./img/linkedin.png"/></a></li>
             </ul>
         </div>
         <h4>Direitos Autorais 2023 - Parking.com </h4>
