--- a/pagamentos.html
+++ b/pagamentos.html
@@ -94,7 +94,7 @@
         <img src="img/logo.png">
         <ul class="lista">
             <li class="itens"><a href="/inicio.html">Home</a></li>
-            <li class="itens"><a href="/parking.html">Parking</a></li>
+            <li class="itens"><a href="/parking.html">Parking.com</a></li>
             <li class="itens"><a href="pagamentos.html">Pagamentos</a></li>
             <li class="itens"><a href="/atendimento.html">Atendimento</a></li>
         </ul>
