--- a/parking.html
+++ b/parking.html
@@ -67,7 +67,7 @@
         <ul class="lista">
             <li class="itens"><a href="/inicio.html">Home</a></li>
             <li class="itens"><a href="/parking.html">Parking</a></li>
-            <li class="itens"><a href="/pagamentos.html">Pagamentos</a></li>
+            <li class="itens"><a href="/pagamentos.html">Parking.com</a></li>
             <li class="itens"><a href="/atendimento.html">Atendimento</a></li>
         </ul>
         <div class="redessociais">
